Check in writeup template

--- a/P2.ipynb
+++ b/P2.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "    for cal_image_name in images_names:\n",
     "    \n",
-    "        #construct the full path of the image\n",
+    "        #Create relative path of the image\n",
     "        image_full_name = str(folder_name)+str(\"/\")+str(cal_image_name)\n",
     "        #read the image\n",
     "        image = cv2.imread(image_full_name)\n",
@@ -278,12 +278,12 @@
     "        #find chessboard corners in the image\n",
     "        ret, corners = cv2.findChessboardCorners(gray_cal_image, (nx, ny), None)\n",
     "        \n",
-    "        #If found, draw corners\n",
+    "        #Check if the function worked properly\n",
     "        if ret == True:\n",
     "            \n",
     "            objpoints.append(objp)\n",
     "            imgpoints.append(corners)\n",
-    "            # Draw and display the corners\n",
+    "            # Use CV2 library for drawing and displaying the corners\n",
     "            img = cv2.drawChessboardCorners(images[image_index], (nx, ny), corners, ret)\n",
     "            saveImage(\"./output_images/calibration_output/\",images_names[image_index][:-4],img)\n",
     "        \n",
@@ -293,6 +293,7 @@
     "    return objpoints,imgpoints\n",
     "\n",
     "def checkCalibrationData():\n",
+    "    #Check if the file exist\n",
     "    exists = os.path.isfile('Calibration_data.p')\n",
     "    \n",
     "    return exists\n",
@@ -356,7 +357,7 @@
     "\n",
     "    #read calibration images\n",
     "    cal_images_names,cal_images = readImages(\"camera_cal\")\n",
-    "    \n",
+    "    #Please note we are using COLOR_BGR2GRAY because we used cv2.imread at reaing\n",
     "    gray_cal_images = convertImage(cal_images,cv2.COLOR_BGR2GRAY)\n",
     "        \n",
     "    # Find the chessboard corners\n",
@@ -574,8 +575,7 @@
     "    combined_mag_dir_color_image = np.zeros_like(combined_mag_dir_binary_image)\n",
     "    combined_mag_dir_color_image[(combined_mag_dir_binary_image == 1) | (color_threshold_binary_image == 1)] = 1\n",
     "    \n",
-    "    #color_binary = np.dstack(( np.zeros_like(combined_mag_dir_binary_image), combined_mag_dir_binary_image, color_threshold_binary_image)) * 255\n",
-    "    \n",
+    "   \n",
     "    if(save_image is True):\n",
     "        all_gradients_example = combined_mag_dir_color_image*255\n",
     "        saveImage(str(save_path)+\"/gradient/color_mag_dir\",image_name,all_gradients_example)\n",
@@ -759,19 +759,19 @@
     "        #draw the window on the right line\n",
     "        #cv2.rectangle(out_img,(win_xright_low,win_y_low),(win_xright_high,win_y_high),(0,255,0), 2) \n",
     "        \n",
-    "        #Identify the nonzero pixels in x and y within the window\n",
+    "        #Identifying the nonzero pixels in x and y within the window\n",
     "        #mark the left pixels that are within the valid range\n",
     "        good_left = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
     "        (nonzerox >= win_xleft_low) &  (nonzerox < win_xleft_high))\n",
     "        \n",
-    "        #get the y indicies that contains True values\n",
+    "        #Get the y indicies that contains True values\n",
     "        good_left_inds = good_left.nonzero()[0]\n",
     "        \n",
-    "        #mark the left pixels that are within the valid range\n",
+    "        #Mark the left pixels that are within the valid range\n",
     "        good_right = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
     "        (nonzerox >= win_xright_low) &  (nonzerox < win_xright_high))\n",
     "        \n",
-    "        #get the y indicies that contains True values\n",
+    "        #Getting the y indicies that contains True values\n",
     "        good_right_inds = good_right.nonzero()[0]\n",
     "        \n",
     "        # Append these indices to the lists\n",
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,51 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "t:  24%|████████████████▎                                                  | 118/485 [00:29<01:25,  4.30it/s, now=None]"
+      "                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready test_videos_output/challenge_video.mp4\n",
+      "Moviepy - Building video test_videos_output/harder_challenge_video.mp4.\n",
+      "Moviepy - Writing video test_videos_output/harder_challenge_video.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready test_videos_output/harder_challenge_video.mp4\n",
+      "Moviepy - Building video test_videos_output/project_video.mp4.\n",
+      "Moviepy - Writing video test_videos_output/project_video.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready test_videos_output/project_video.mp4\n"
      ]
     }
    ],
